Fix repetitive recommendations and patch security findings